--- a/requirements.txt
+++ b/requirements.txt
@@ -11,9 +11,11 @@ certifi==2017.7.27.1
 cffi==1.11.0
 chardet==3.0.4
 cryptography==2.0.3
+defusedxml==0.5.0
 Django==1.11.5
 django-filter==1.0.4
 django-guardian==1.4.9
+django-user-agents==0.3.2
 djangorestframework==3.6.4
 docutils==0.14
 httpie==0.9.9
@@ -26,21 +28,29 @@ lazy-object-proxy==1.3.1
 Markdown==2.6.9
 MarkupSafe==1.0
 mccabe==0.6.1
+oauthlib==2.0.6
+olefile==0.44
 paramiko==2.3.1
+Pillow==4.3.0
 pyasn1==0.3.6
 pycparser==2.18
 Pygments==2.2.0
+PyJWT==1.5.3
 pylint==1.7.2
 PyNaCl==1.1.2
 python-dateutil==2.6.1
+python3-openid==3.1.0
 pytz==2017.2
 PyYAML==3.12
 requests==2.18.4
+requests-oauthlib==0.8.0
 s3transfer==0.1.11
 six==1.10.0
 social-auth-app-django==2.0.0
+social-auth-core==1.5.0
 troposphere==1.9.5
+ua-parser==0.7.3
 urllib3==1.22
+user-agents==1.1.0
 virtualenv==15.1.0
 wrapt==1.10.11
-Pillow==4.3.0
